[package]
name = "book-algorithm-solution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.3"

[[bin]]
name = "linear_search"
path = "src/chapter03/linear_search.rs"

[[bin]]
name = "linear_search_index"
path = "src/chapter03/linear_search_index.rs"
