[package]
name = "book-algorithm-solution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
proconio = "0.4.3"

[[bin]]
name = "linear_search"
path = "src/chapter03/linear_search.rs"

[[bin]]
name = "linear_search_index"
path = "src/chapter03/linear_search_index.rs"

[[bin]]
name = "linear_search_min"
path = "src/chapter03/linear_search_min.rs"

[[bin]]
name = "linear_search_pair"
path = "src/chapter03/linear_search_pair.rs"

[[bin]]
name = "linear_search_bit"
path = "src/chapter03/linear_search_bit.rs"

[[bin]]
name = "sum_from_1_to_n"
path = "src/chapter04/sum_from_1_to_n.rs"

[[bin]]
name = "gcd"
path = "src/chapter04/gcd.rs"

[[bin]]
name = "recursive_fibo"
path = "src/chapter04/recursive_fibo.rs"

[[bin]]
name = "recursive_fibo_printable"
path = "src/chapter04/recursive_fibo_printable.rs"

[[bin]]
name = "recursive_fibo_memorize"
path = "src/chapter04/recursive_fibo_memorize.rs"

[[bin]]
name = "partial_sum"
path = "src/chapter04/partial_sum.rs"

[[bin]]
name = "frog_problem_by_dp"
path = "src/chapter05/frog_problem_by_dp.rs"

[[bin]]
name = "frog_problem_by_dp_with_relaxation"
path = "src/chapter05/frog_problem_by_dp_with_relaxation.rs"
